# OOD

ood-clion/lw1/: CMakeLists.txt
ood-clion/lw10/: .gitignore  DOCS.md  eslint.mjs  eslintrc.json  (+6 more)
ood-clion/lw2/: CMakeLists.txt
ood-clion/lw2/task1/Observable/: Observable.h
ood-clion/lw2/task1/Observer/: CStatsDisplay.h
ood-clion/lw2/task2/: CMakeLists.txt  main.cpp
ood-clion/lw2/task2/Observable/: IObservable.h  Observable.h
ood-clion/lw2/task2/Observer/: CStatsDisplay.h
ood-clion/lw2/task3/: main.cpp
ood-clion/lw2/task3/Data/: WeatherData.h
ood-clion/lw2/task3/Observable/: Observable.h
ood-clion/lw2/task3/Observer/: CStatsDisplay.h
ood-clion/lw2/task4/: CMakeLists.txt  main.cpp
ood-clion/lw2/task4/Observable/: IObservable.h  Observable.h  WeatherManager.h
ood-clion/lw2/task4/Observer/: CDisplay.h  CStatsDisplay.h  IObserver.h  WeatherManager.h
ood-clion/lw2/task5/: CMakeLists.txt  main.cpp
ood-clion/lw2/task5/Data/: WeatherData.h
ood-clion/lw2/task5/Observable/: WeatherManager.h
ood-clion/lw2/task5/Observer/: CDisplay.h  CStatsDisplay.h  IObserver.h  Observable.h  WeatherManager.h
ood-clion/lw2/task7/: CMakeLists.txt  main.cpp
ood-clion/lw2/task7/Observer/: IObserver.h  Observable.h  WeatherManager.h
ood-clion/lw2/task7/Observer/Data/: Event.h
ood-clion/lw2/task7/Observer/Display/: FishermanDisplay.h  StatsDisplay.h
ood-clion/lw2/tests2/: CMakeLists.txt  tests2.cpp
ood-clion/lw2/tests3/: CMakeLists.txt  tests3.cpp
ood-clion/lw2/tests4/: CMakeLists.txt  tests4.cpp
ood-clion/lw2/tests5/: CMakeLists.txt  tests5.cpp
(+180 files in other folders)
